[package]
name = "healthcheck"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license = "Apache-2.0"

authors = [
    "James Gober <codeca@jamesgober.dev>"
]

description = "Coming Soon"

keywords = [
    "heartbeat",
    "metrics"
]

categories = [

]

documentation = "https://docs.rs/healthcheck"
repository = "https://github.com/jamesgober/healthcheck"
homepage = "https://github.com/jamesgober/healthcheck"

#
[dependencies]
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"